# Kaggle1_NBADraft

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
kaggle1_nbadraft/: __init__.py  dataset.py  features.py  plots.py
models/: GB.joblib  GB_smote.joblib  SVM.joblib  SVM_RFE.joblib  SVM_RFE_smote.joblib  SVM_rfecv.joblib  SVM_smote.joblib  SVM_smote_linear.joblib  XGBoost.joblib  ada.joblib  decisionTree.joblib  logisticRegression.joblib  ohe.joblib  randomForest.joblib  randomForest_FE.joblib  randomForest_smote.joblib  scaler.joblib  sh-GBoost.joblib  sh-Poly_Results.joblib  sh-XGBoost.joblib  sh-rf.joblib
notebooks/: Dhruv_Joshi-25032069-week4_CatBoost.ipynb  Dhruv_Joshi-25032069-week4_PolynomialRegressionWithSmoteen.ipynb  Dhruv_Joshi-25032069-week4_Random_Forest.ipynb  Dhruv_Joshi-25032069-week4_XGBoost.ipynb  Dhruv_Joshi_25032069_week4_Randomforest.ipynb  liu_zheng-24913497-week1_rf.ipynb  liu_zheng-24913497-week2_rf.ipynb  liu_zheng-24913497-week3_xgb.ipynb  liu_zheng-24913497-week3_xgb2.ipynb  liu_zheng-24913497-week4_final.ipynb  paiynthalir_nallamuthu-24715435-week1_DecisionTree.ipynb  paiynthalir_nallamuthu-24715435-week1_EDA_DataProcessing.ipynb  paiynthalir_nallamuthu-24715435-week1_baseline.ipynb  paiynthalir_nallamuthu-24715435-week1_logisticRegression.ipynb  paiynthalir_nallamuthu-24715435-week1_randomforest-Copy1.ipynb  paiynthalir_nallamuthu-24715435-week1_randomforest.ipynb  paiynthalir_nallamuthu-24715435-week2_SVM.ipynb  paiynthalir_nallamuthu-24715435-week2_logisticRegression.ipynb  paiynthalir_nallamuthu-24715435-week3_BestModel.ipynb  (+19 more)
(+14 files in other folders)
