[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kaggle1_nbadraft"
version = "0.0.1"
description = "to build a model that will predict if a college basketball player will be drafted to join the NBA league based on his statistics for the current season"
authors = [
  { name = "Paiynthair(Pine)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["kaggle1_nbadraft"]
force_sort_within_sections = true
