[tool.poetry]
name = "kaggle1-nbadraft"
version = "0.1.0"
description = ""
authors = ["Paiynthalir(Pine)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
matplotlib = "^3.9.2"
pyarrow = "^17.0.0"
altair = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
